--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.5",
     "typescript": "^5"
   }
 }
