--- a/package.json
+++ b/package.json
@@ -77,11 +77,13 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "stripe": "^17.6.0",
+    "swagger-ui-express": "^5.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
+    "yamljs": "^0.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -92,6 +94,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "openapi-typescript": "6.7.5",
+    "swagger-typescript-api": "13.0.3",
     "typescript": "^5"
   }
 }
